@@ -49,10 +49,19 @@ extforward.forwarder
   Default: empty
 
   Example: ::
-    
+
     extforward.forwarder = ("10.0.0.232" => "trust")
 
-  will translate ip addresses coming from 10.0.0.232 to real ip addresses extracted from X-Forwarded-For: HTTP request header.
+  will translate ip addresses coming from 10.0.0.232 to real ip addresses extracted from "X-Forwarded-For" or "Forwarded-For" HTTP request header.
+
+extforward.headers
+  Sets headers to search for finding the originl addresses.
+
+  Example (for use with a Zeus ZXTM loadbalancer): ::
+
+    extforward.headers = ("X-Cluster-Client-Ip")
+
+  Default: empty, results in searching for "X-Forwarded-For" and "Forwarded-For"
 
 Note
 =======
